unpackaged/main/default/objects/conference360__Attendee_Data_Message__c/fields/conference360__Body__c.field-meta.xml
<CustomField>
    <fullName>conference360__Body__c</fullName>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>