unpackaged/main/default/objects/conference360__Attendee_Data_Message__c/fields/conference360__Event__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Event Attendee Data Messages</relationshipLabel>
    <relationshipName>Event_Attendee_Data_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>