unpackaged/main/default/objects/conference360__Attendee_Data_Message__c/fields/conference360__Event_Attendee_Data__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Attendee_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Not using for now - switched to Event_Attendee_Data2__c which is a Master Detail so we can create rollup fields instead of a bunch of trigger code. Keeping this lookup for now in case we need to switch back because of locking issues</description>
    <label>Event Attendee Data</label>
    <referenceTo>conference360__Event_Attendee_Data__c</referenceTo>
    <relationshipLabel>Event Attendee Data Messages</relationshipLabel>
    <relationshipName>Event_Attendee_Data_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>